syntax = "proto3";

package kuma.system.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/system/v1alpha1";

message PingRequest {
  string instance_id = 1;
  string address = 2;
  uint32 inter_cp_port = 3;
  bool ready = 4;
}

message PingResponse { bool leader = 1; }

service InterCpPingService { rpc Ping(PingRequest) returns (PingResponse); }
